[package]
version = "0.3.0"
name = "mc-crawler"
repository = "https://github.com/wiberlin/mc-crawler"
authors = ["Charmaine Ndolo <Charmaine.Ndolo@hu-berlin.de>"]
description = "A MobileCoin Network Crawler."
keywords = ["mobilecoin", "blockchain", "fbas", "crawler"]
license = "MIT"
readme = "./README.md"
edition = "2021"

[dependencies]
grpcio = "0.10.2"
log = "0.4"
env_logger = "0.10"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.13"
structopt = "0.3"
maxminddb = "0.23"
mc-consensus-scp = {git = "https://github.com/mobilecoinfoundation/mobilecoin", tag = "v2.0.2"}
mc-util-uri = {git = "https://github.com/mobilecoinfoundation/mobilecoin", tag = "v2.0.2"}
mc-util-grpc = {git = "https://github.com/mobilecoinfoundation/mobilecoin", tag = "v2.0.2"}
mc-common = {git = "https://github.com/mobilecoinfoundation/mobilecoin", tag = "v2.0.2"}
mc-consensus-api = {git = "https://github.com/mobilecoinfoundation/mobilecoin", tag = "v2.0.2"}
mc-peers = {git = "https://github.com/mobilecoinfoundation/mobilecoin", tag = "v2.0.2"}
mc-util-serial = {git = "https://github.com/mobilecoinfoundation/mobilecoin", tag = "v2.0.2"}
mc-crypto-keys = {git = "https://github.com/mobilecoinfoundation/mobilecoin", tag = "v2.0.2"}

[profile.release]
opt-level = 3
rpath = false
lto = false

# From https://github.com/mobilecoinfoundation/mobilecoin/blob/v2.0.2/Cargo.toml
[patch.crates-io]

# Fork and rename to use "OG" dalek-cryptography.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "65f8af4ca0bc1cb2fd2148c3259a0a76b155ff3e" }

# Fix issues with recent nightlies, bump curve25519-dalek version
curve25519-dalek = { git = "https://github.com/mobilecoinfoundation/curve25519-dalek.git", rev = "8791722e0273762552c9a056eaccb7df6baf44d7" }
ed25519-dalek = { git = "https://github.com/mobilecoinfoundation/ed25519-dalek.git", rev = "4194e36abc75722e6fba7d552e719448fc38c51f" }
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "c1966b8743d320cd07a54191475e5c0f94b2ea30" }

schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "5c98ae068ee4652d6df6463b549fbf2d5d132faa" }
# Overridden since we need a commit that uprevs a bunch of dependencies.

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "ac6ee17a31e37311ce7f4fa0649c340e5d85258d" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "ac6ee17a31e37311ce7f4fa0649c340e5d85258d" }

# Override lmdb-rkv for a necessary bugfix (see https://github.com/mozilla/lmdb-rs/pull/80)
lmdb-rkv = { git = "https://github.com/mozilla/lmdb-rs", rev = "df1c2f5" }
